--- a/src/app/pages/notfound/notfound.page.html
+++ b/src/app/pages/notfound/notfound.page.html
@@ -3,5 +3,7 @@
     <mat-icon>videogame_asset_off</mat-icon>
     <h1>OH OH!</h1>
     <p>Parece que te haz querido dirigir a una pagina no existente, reingresala nuevamente.</p>
+    <br />
+    <ion-button color="warning" [routerLink]="'/home'" (click)="presentAlert()">Regresar al Inicio</ion-button>
   </div>
 </ion-content>
