--- a/src/app/pages/vistaadmin/vistaadmin.page.html
+++ b/src/app/pages/vistaadmin/vistaadmin.page.html
@@ -20,8 +20,8 @@
       <ion-card-subtitle>39.999</ion-card-subtitle>
       
     </ion-card-header>
-    <ion-button color="success">Editar</ion-button>
-    <ion-button color="danger">Eliminar</ion-button>
+    <ion-button color="success" (click)="presentAnotherAlert()" >Editar</ion-button>
+    <ion-button color="danger" (click)="presentAnotherAlert()" >Eliminar</ion-button>
       <div class="icon-container">
         <ion-card-title>Disponible en:</ion-card-title>
         <ion-icon name="logo-steam"></ion-icon>
