--- a/src/app/pages/vistaadmin/vistaadmin.page.html
+++ b/src/app/pages/vistaadmin/vistaadmin.page.html
@@ -211,7 +211,7 @@
         <mat-icon>shopping_cart</mat-icon>
         Carrito
       </ion-tab-button>
-      <ion-tab-button tab="library">
+      <ion-tab-button tab="library" [routerLink]="['/agregarjuego']">
       <ion-icon name="duplicate-outline"></ion-icon>
       Agregar Juegos
       </ion-tab-button>
